More explicit Linkedin configuration

--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,4 @@ description: A fantastic blog that is fantastic.
 twitter: ratibus
 github: ratibus
 gravatar_url: http://gravatar.com/avatar/4bb93034715732d444b300fc0bd5dfd6
-linkedin: 9D7WSu
+linkedin: elemoine
