Update blog description

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ rdiscount:
 
 name: Eric Lemoine
 url: http://blog.ratibus.net
-description: A fantastic blog that is fantastic.
+description: Eric Lemoine's, aka ratibus, blog
 twitter: ratibus
 github: ratibus
 gravatar_url: http://gravatar.com/avatar/4bb93034715732d444b300fc0bd5dfd6
