--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ permalink: /posts/:title
 rdiscount:
   extensions: [smart]
 
-name: Eric Lemoine
+name: ratibus' blog
+author: Eric Lemoine
 url: http://blog.ratibus.net
 description: Eric Lemoine's, aka ratibus, blog
 twitter: ratibus
