--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ rdiscount:
 
 name: ratibus' blog
 author: Eric Lemoine
-url: http://blog.ratibus.net
+url: https://blog.ratibus.net
 description: Eric Lemoine's, aka ratibus, blog
 twitter: ratibus
 github: ratibus
-gravatar_url: http://gravatar.com/avatar/4bb93034715732d444b300fc0bd5dfd6
+gravatar_url: https://gravatar.com/avatar/4bb93034715732d444b300fc0bd5dfd6
 linkedin: elemoine
